--- a/Timeboard-web/app/views/users/index.html.erb
+++ b/Timeboard-web/app/views/users/index.html.erb
@@ -7,6 +7,7 @@
       <th>Password</th>
       <th>First name</th>
       <th>Last name</th>
+      <th>Nick name</th>
       <th>Gender</th>
       <th>Date of birth</th>
       <th>Date joined</th>
@@ -23,9 +24,10 @@
         <td><%= user.password %></td>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
+        <td><%= user.nick_name %></td>
         <td><%= user.gender %></td>
         <td><%= user.date_of_birth %></td>
-        <td><%= user.date_joined %></td>
+        <td><%= user.created_at.to_date %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
