--- a/Timeboard-web/app/views/layouts/_header.html.erb
+++ b/Timeboard-web/app/views/layouts/_header.html.erb
@@ -1,6 +1,8 @@
   <nav class="navbar navbar-default" role="navigation">
       <div class="navbar-header">
-	<a class="navbar-brand" href="#"><%= link_to "TimeBoard",home_path %></a>
+	<a class="navbar-brand" href="#">
+	  <%= link_to "TimeBoard",home_path, id: "logo" %>
+	</a>
       </div>
       <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
