--- a/Timeboard-web/app/views/static_pages/home.html.erb
+++ b/Timeboard-web/app/views/static_pages/home.html.erb
@@ -1,10 +1,25 @@
-<% provide(:title, '') %>                                                       
-<div class="jumbotron">
-  <h1>Welcome to TimeBoard</h1>
-  <p>
-    This is the coolest!
-  </p>
-  <p>
-    <a class="btn btn-primary btn-lg" href="#">Sign up</a>
-  </p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-8">
+      <img src="https://s3.amazonaws.com/media.jetstrap.com/6ROwtRA8TmumwrEDccoT_Draw back.png"></img>
+    </div>
+    <div class="col-md-4">
+      <h3>Sign in</h3>
+      <form>
+	<div class="form-group">
+	  <input type="text" class="form-control"></input>
+	</div>
+	<div class="form-group">
+	  <input type="text" class="form-control"></input>
+	</div>
+      </form>
+      <label class="checkbox">
+	<input type="checkbox"></input>
+	Remember me
+      </label>
+      <button type="submit" class="btn btn-primary text-center pull-right">
+	Sign in
+      </button>
+    </div>
+  </div>
 </div>
