--- a/Timeboard-web/app/assets/stylesheets/custom.css.scss
+++ b/Timeboard-web/app/assets/stylesheets/custom.css.scss
@@ -1,174 +1,177 @@
-@import "twitter/bootstrap";
+$grayMediumLight: #eaeaea;
 
-/* $grayMediumLight: #eaeaea; */
+@mixin box_sizing {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizeing: border-box;
+  box-sizeing: border-box;
+}
 
+/* universal */
 
-/* @mixin box_sizing { */
-/*   -moz-box-sizing: border-box; */
-/*   -webkit-box-sizeing: border-box; */
-/*   box-sizeing: border-box; */
-/* } */
+html {
+  overflow-y: scroll;
+}
 
-/* /\* universal *\/ */
+body {
+  padding-top: 60px;
+}
 
-/* html { */
-/*   overflow-y: scroll; */
-/* } */
+section {
+  overflow: auto;
+}
 
-/* body { */
-/*   padding-top: 60px; */
-/* } */
+textarea {
+  resize: vertical;
+}
 
-/* section { */
-/*   overflow: auto; */
-/* } */
+.center {
+  text-align: center;
+}
 
-/* textarea { */
-/*   resize: vertical; */
-/* } */
+.center h1 {
+  margin-bottom: 10px;
+}
 
-/* .center { */
-/*   text-align: center; */
-/* } */
+/* typography */
 
-/* .center h1 { */
-/*   margin-bottom: 10px; */
-/* } */
+h1, h2, h3, h4, h5, h6 {
+  line-height: 1;
+}
 
-/* /\* typography *\/ */
+h1 {
+  font-size: 3em;
+  letter-spacing: -2px;
+  margin-bottom: 30px;
+  text-align: center;
+}
 
-/* h1, h2, h3, h4, h5, h6 { */
-/*   line-height: 1; */
-/* } */
+h2 {
+  font-size: 1.2em;
+  letter-spacing: -1px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-weight: normal;
+  color: #999;
+}
 
-/* h1 { */
-/*   font-size: 3em; */
-/*   letter-spacing: -2px; */
-/*   margin-bottom: 30px; */
-/*   text-align: center; */
-/* } */
-
-/* h2 { */
-/*   font-size: 1.2em; */
-/*   letter-spacing: -1px; */
-/*   margin-bottom: 30px; */
-/*   text-align: center; */
-/*   font-weight: normal; */
-/*   color: #999; */
-/* } */
-
-/* p { */
-/*   font-size: 1.1em; */
-/*   line-height: 1.7em; */
-/* } */
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
+}
 
 
-/* /\* header *\/ */
+/* header */
 
-/* #logo { */
-/*   float: left; */
-/*   margin-right: 10px; */
-/*   font-size: 1.7em; */
-/*   text-transform: uppercase; */
-/*   letter-spacing: -1px; */
-/*   padding-top: 9px; */
-/*   font-weight: bold; */
-/*   line-height: 1; */
-/* } */
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+  line-height: 1;
+}
 
-
-/* /\* footer *\/ */
-
-/* footer { */
-/*   margin-top: 45px; */
-/*   padding-top: 5px; */
-/*   border-top: 1px solid #eaeaea; */
-/*   color: #999; */
-/* } */
-
-/* footer a { */
-/*   color: #555; */
-/* } */
-
-/* footer a:hover { */
-/*   color: #222; */
-/* } */
-
-/* footer small { */
-/*   float: left; */
-/* } */
-
-/* footer ul { */
-/*   float: right; */
-/*   list-style: none; */
-/* } */
-
-/* footer ul li { */
-/*   float: left; */
-/*   margin-left: 10px; */
-/* } */
-
-/* .debug_dump { */
-/*     clear: both; */
-/*     float: left; */
-/*     width: 100%; */
-/*     margin-top: 45px; */
-/*     @include box_sizing; */
-/* } */
-
-/* /\* sidebar *\/ */
-
-/* aside { */
-/*   section { */
-/*     padding: 10px 0; */
-/*     border-top: 1px solid; */
-/*     &:first-child { */
-/*       border: 0; */
-/*       padding-top: 0; */
-/*     } */
-/*     span { */
-/*       display: block; */
-/*       margin-bottom: 3px; */
-/*       line-height: 1; */
-/*     } */
-/*     h1 { */
-/*       font-size: 1.4em; */
-/*       text-align: left; */
-/*       letter-spacing: -1px; */
-/*       margin-bottom: 3px; */
-/*       margin-top: 0px; */
-/*     } */
-/*   } */
-/* } */
-
-/* .gravatar { */
-/*   float: left; */
-/*   margin-right: 10px; */
-/* } */
-
-/* /\* forms *\/ */
-
-/* input, textarea, select, .uneditable-input { */
-/*   border: 1px solid #bbb; */
-/*   width: 100%; */
-/*   margin-bottom: 15px; */
-/*   @include box_sizing; */
-/* } */
-
-/* input { */
-/*   height: auto !important; */
-/* } */
+#logo:hover {
+  color: #fff;
+  text-decoration: none;
+}
 
 
-/* #error_explanation { */
-/*   color: #f00; */
-/*   ul { */
-/*     list-style: none; */
-/*     margin: 0 0 18px 0; */
-/*   } */
-/* } */
+/* footer */
 
-/* .field_with_errors { */
-/*   @extend .control-group; */
-/*   @extend .error; */
-/* } */
+footer {
+  margin-top: 45px;
+  padding-top: 5px;
+  border-top: 1px solid #eaeaea;
+  color: #999;
+}
+
+footer a {
+  color: #555;
+}
+
+footer a:hover {
+  color: #222;
+}
+
+footer small {
+  float: left;
+}
+
+footer ul {
+  float: right;
+  list-style: none;
+}
+
+footer ul li {
+  float: left;
+  margin-left: 10px;
+}
+
+.debug_dump {
+    clear: both;
+    float: left;
+    width: 100%;
+    margin-top: 45px;
+    @include box_sizing;
+}
+
+/* sidebar */
+
+aside {
+  section {
+    padding: 10px 0;
+    border-top: 1px solid;
+    &:first-child {
+      border: 0;
+      padding-top: 0;
+    }
+    span {
+      display: block;
+      margin-bottom: 3px;
+      line-height: 1;
+    }
+    h1 {
+      font-size: 1.4em;
+      text-align: left;
+      letter-spacing: -1px;
+      margin-bottom: 3px;
+      margin-top: 0px;
+    }
+  }
+}
+
+.gravatar {
+  float: left;
+  margin-right: 10px;
+}
+
+/* forms */
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+input {
+  height: auto !important;
+}
+
+
+#error_explanation {
+  color: #f00;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .control-group;
+  @extend .error;
+}
