--- a/Timeboard-web/app/views/layouts/_header.html.erb
+++ b/Timeboard-web/app/views/layouts/_header.html.erb
@@ -1,14 +1,14 @@
-  <nav class="navbar navbar-default" role="navigation">
-      <div class="navbar-header">
-	<a class="navbar-brand" href="#">
-	  <%= link_to "TimeBoard",home_path, id: "logo" %>
-	</a>
-      </div>
-      <div class="collapse navbar-collapse navbar-ex1-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><%= link_to "Home",home_path %></li>
-          <li><%= link_to "Help",    help_path %></li>
-          <li><%= link_to "Sign in", '#'%></li>
-        </ul>
-      </div>
-  </nav>
+<nav class="navbar navbar-default" role="navigation">
+  <div class="navbar-header">
+    <div class="navbar-brand">
+      <%= link_to "TimeBoard",home_path, id: "logo" %>
+    </div>
+  </div>
+  <div class="collapse navbar-collapse navbar-ex1-collapse">
+    <ul class="nav navbar-nav">
+      <li class="active"><%= link_to "Home",home_path %></li>
+      <li><%= link_to "Help",    help_path %></li>
+      <li><%= link_to "Sign in", '#'%></li>
+    </ul>
+  </div>
+</nav>
