--- a/Timeboard-web/app/views/users/show.html.erb
+++ b/Timeboard-web/app/views/users/show.html.erb
@@ -21,6 +21,11 @@
 </p>
 
 <p>
+  <strong>Nick name:</strong>
+  <%= @user.nick_name %>
+</p>
+
+<p>
   <strong>Gender:</strong>
   <%= @user.gender %>
 </p>
@@ -32,7 +37,7 @@
 
 <p>
   <strong>Date joined:</strong>
-  <%= @user.date_joined %>
+  <%= @user.created_at.to_date %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
