Fixed user columns input and display.

--- a/Timeboard-web/app/views/users/show.html.erb
+++ b/Timeboard-web/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Password:</strong>
-  <%= @user.password %>
+  <%= @user.password_digest %>
 </p>
 
 <p>
@@ -32,7 +32,7 @@
 
 <p>
   <strong>Date joined:</strong>
-  <%= @user.date_joined %>
+  <%= @user.created_at.to_date %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
