--- a/Timeboard-web/app/views/static_pages/home.html.erb
+++ b/Timeboard-web/app/views/static_pages/home.html.erb
@@ -10,7 +10,7 @@
 	  <input type="text" class="form-control" placeholder="Email" />
 	</div>
 	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Password" />
+	  <input type="password" class="form-control" placeholder="Password" />
 	</div>
       </form>
       <label class="checkbox">
