--- a/Timeboard-web/app/views/users/index.html.erb
+++ b/Timeboard-web/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.email %></td>
-        <td><%= user.password %></td>
+        <td><%= user.password_digest %></td>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
         <td><%= user.nick_name %></td>
