--- a/Timeboard-web/app/views/static_pages/home.html.erb
+++ b/Timeboard-web/app/views/static_pages/home.html.erb
@@ -4,15 +4,23 @@
       <img src="https://s3.amazonaws.com/media.jetstrap.com/6ROwtRA8TmumwrEDccoT_Draw back.png"></img>
     </div>
     <div class="col-md-4">
-      <h3>Sign in</h3>
-      <form>
-	<div class="form-group">
-	  <input type="text" class="form-control" placeholder="Email" />
-	</div>
-	<div class="form-group">
-	  <input type="password" class="form-control" placeholder="Password" />
-	</div>
-      </form>
+      <div class="title-text">
+        Sign in
+      </div>
+      <div class="signin-option">
+        (or <%= link_to "Sign up Today!", signup_path %> )
+      </div>
+      <br/>
+      <div class="signin-form">
+	<form>
+	  <div class="form-group">
+	    <input type="text" class="form-control" placeholder="Email" />
+	  </div>
+	  <div class="form-group">
+	    <input type="password" class="form-control" placeholder="Password" />
+	  </div>
+	</form>
+      </div>
       <label class="checkbox">
 	<input type="checkbox"></input>
 	Remember me
