--- a/Timeboard-web/app/assets/stylesheets/custom.css.scss
+++ b/Timeboard-web/app/assets/stylesheets/custom.css.scss
@@ -114,3 +114,15 @@ footer ul li {
   @extend .control-group;
   @extend .error;
 }
+
+
+input, textarea, select, .uneditable-input {
+  border: 1px solid #bbb;
+  width: 100%;
+  margin-bottom: 15px;
+  @include box_sizing;
+}
+
+input {
+  height: auto !important;
+}
