--- a/Timeboard-web/app/assets/stylesheets/custom.css.scss
+++ b/Timeboard-web/app/assets/stylesheets/custom.css.scss
@@ -115,6 +115,9 @@ footer ul li {
   @extend .error;
 }
 
+.new_user {
+  float: left;
+}
 
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
@@ -125,4 +128,18 @@ input, textarea, select, .uneditable-input {
 
 input {
   height: auto !important;
+}
+
+
+#error_explanation {
+  color: #f00;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+  }
+}
+
+.field_with_errors {
+  @extend .control-group;
+  @extend .error;
 }
