--- a/Timeboard-web/app/assets/stylesheets/custom.css.scss
+++ b/Timeboard-web/app/assets/stylesheets/custom.css.scss
@@ -143,3 +143,26 @@ input {
   @extend .control-group;
   @extend .error;
 }
+
+
+.week-table-header {
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  font-size: 90%;
+  border-bottom: 2px solid #111111;
+  border-top: 1px solid #999;
+  text-align: left;
+}
+
+th, td {
+  padding: 7px 10px 10px 10px;
+}
+
+tr.even {
+  background-color: #efefef;
+}
+
+tr:hover {
+  background-color: #c3e6e5;
+}
+
